--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>library</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <section>
+        <nav>
+            <div>
+        <img class="logo" src="./Library.svg" alt="">
+        <ul class="nav__links">
+            <li><a href="#" class="nav__link" ></a>Home</a></li>
+            <li><a href="#" class="nav__link" ></a> COntact</a></li>
+            <li><a href="#" class="nav__link" ></a> Books</a></li>
+        </ul>
+    </div>
+        </nav>
+        <header>
+
+        </header>
+    </section>
 </body>
 </html>
