--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <section>
         <nav>
-            <div>
+            <div class="nav__container">
         <img class="logo" src="./Library.svg" alt="">
         <ul class="nav__links">
             <li><a href="#" class="nav__link" ></a>Home</a></li>
-            <li><a href="#" class="nav__link" ></a> COntact</a></li>
-            <li><a href="#" class="nav__link" ></a> Books</a></li>
+            <li><a href="#" class="nav__link" ></a>Contact</a></li>
+            <li><a href="#" class="nav__link nav__link-primary" ></a>Books</a></li>
         </ul>
     </div>
         </nav>
